# TradingAgents-WebUI

./: .gitignore  README.md  pyproject.toml
tradingagents_webui/: __init__.py  main.py  server.py
tradingagents_webui/routes/: analysis.py  config.py  reports.py
tradingagents_webui/static/: app.js  index.html  styles.css
