[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents-webui"
version = "0.1.0"
description = "Web UI for TradingAgents multi-agent trading framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
tradingagents-web = "tradingagents_webui.main:main"

[tool.setuptools.packages.find]
include = ["tradingagents_webui*"]

[tool.setuptools.package-data]
tradingagents_webui = ["static/*"]